--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
     transition: width 0.4s ease;
   }
 
+  /* Form layout */
   form {
     background: white;
     border-radius: var(--radius);
@@ -76,28 +77,44 @@
     gap: 12px;
   }
 
-  input, button {
+  label {
+    font-size: 13px;
+    font-weight: 600;
+  }
+
+  input[type="text"],
+  input[type="date"],
+  input[type="time"],
+  input[type="number"],
+  input[type="file"] {
     width: 100%;
     padding: 10px;
     border-radius: var(--radius);
     border: 1px solid #cbd5e1;
     font-size: 15px;
+    box-sizing: border-box;
   }
 
-  button {
+  /* botão principal do formulário ocupa a linha inteira */
+  button[type="submit"] {
     grid-column: 1 / -1;
-    background: var(--cor-primaria);
-    color: white;
+    padding: 14px;
     border: none;
+    border-radius: var(--radius);
+    font-size: 16px;
+    color: white;
+    background: var(--cor-primaria);
     font-weight: 500;
     cursor: pointer;
     transition: background 0.2s;
+    width: 100%;
   }
 
-  button:active {
+  button[type="submit"]:active {
     background: #0056d2;
   }
 
+  /* Tabela */
   table {
     width: 100%;
     border-collapse: collapse;
@@ -122,14 +139,18 @@
     font-size: 14px;
   }
 
+  /* botões de ação na tabela — inline e compactos */
   .btn {
+    display: inline-block;
     border: none;
     border-radius: 6px;
     padding: 6px 8px;
     font-size: 13px;
-    margin: 1px;
+    margin: 2px 4px 2px 0;
     color: white;
     cursor: pointer;
+    line-height: 1;
+    vertical-align: middle;
   }
 
   .btn-ganhou { background: var(--cor-sucesso); }
@@ -143,11 +164,16 @@
     width: 100%;
     margin-top: 10px;
     font-weight: bold;
+    padding: 10px;
+    border-radius: 8px;
+    border: none;
+    cursor: pointer;
   }
 
   @media (max-width: 600px) {
     form { grid-template-columns: 1fr; }
     th, td { font-size: 12px; }
+    .btn { font-size: 12px; padding: 6px 6px; }
   }
 </style>
 </head>
@@ -162,33 +188,66 @@
         <span id="valorMeta">R$ 0,00</span>
       </div>
       <div class="progress-bar"><div id="barraProgresso" class="progress"></div></div>
-      <div id="metaRestante">Faltam R$ 0,00</div>
-      <div style="color:#1e40af;">Banca Atual: <strong id="bancaAtual">R$ 0,00</strong></div>
+      <div class="meta-restante" id="metaRestante">Faltam R$ 0,00</div>
+      <div class="meta-restante" style="color:#1e40af;">Banca Atual: <strong id="bancaAtual">R$ 0,00</strong></div>
       <button class="btn-reset" id="resetarPainel">🔄 Resetar Painel</button>
     </div>
 
     <form id="entradaForm">
-      <div><label>Jogo</label><input id="jogo" required></div>
-      <div><label>Data</label><input id="data" type="date" required></div>
-      <div><label>Hora</label><input id="hora" type="time" required></div>
-      <div><label>Odd</label><input id="odd" type="number" step="0.01" required></div>
-      <div><label>Tipo</label><input id="tipo" required></div>
-      <div><label>Valor da Entrada</label><input id="entrada" type="number" step="0.01" required></div>
-      <div><label>Banca Inicial</label><input id="banca" type="number" step="0.01" required></div>
-      <div><label>Meta</label><input id="meta" type="number" step="0.01" required></div>
-      <div><label>Imagem (opcional)</label><input id="imagem" type="file" accept="image/*"></div>
+      <div>
+        <label for="jogo">Jogo</label>
+        <input id="jogo" type="text" placeholder="Ex: Flamengo x Palmeiras" required>
+      </div>
+      <div>
+        <label for="data">Data</label>
+        <input id="data" type="date" required>
+      </div>
+      <div>
+        <label for="hora">Hora</label>
+        <input id="hora" type="time" required>
+      </div>
+      <div>
+        <label for="odd">Odd</label>
+        <input id="odd" type="number" step="0.01" placeholder="1.85" required>
+      </div>
+      <div>
+        <label for="tipo">Tipo</label>
+        <input id="tipo" type="text" placeholder="Ex: Over 2.5" required>
+      </div>
+      <div>
+        <label for="entrada">Valor da Entrada</label>
+        <input id="entrada" type="number" step="0.01" placeholder="Ex: 100" required>
+      </div>
+      <div>
+        <label for="banca">Banca Inicial</label>
+        <input id="banca" type="number" step="0.01" placeholder="Ex: 1000" required>
+      </div>
+      <div>
+        <label for="meta">Meta</label>
+        <input id="meta" type="number" step="0.01" placeholder="Ex: 500" required>
+      </div>
+      <!-- CAMPO DE IMAGEM -->
+      <div>
+        <label for="imagem">Imagem</label>
+        <input id="imagem" type="file" accept="image/*">
+      </div>
+
       <button type="submit">➕ Adicionar Entrada</button>
     </form>
 
     <table id="tabelaEntradas">
       <thead>
-        <tr><th>Jogo</th><th>Data</th><th>Hora</th><th>Odd</th><th>Tipo</th><th>Entrada</th><th>Ganho</th><th>Ações</th></tr>
+        <tr>
+          <th>Jogo</th><th>Data</th><th>Hora</th><th>Odd</th>
+          <th>Tipo</th><th>Entrada</th><th>Ganho</th><th>Imagem</th><th>Ações</th>
+        </tr>
       </thead>
       <tbody></tbody>
     </table>
   </main>
 
   <script>
+    // Elementos
     const form = document.getElementById("entradaForm");
     const tabela = document.querySelector("#tabelaEntradas tbody");
     const metaEl = document.getElementById("valorMeta");
@@ -198,11 +257,32 @@
     const resetBtn = document.getElementById("resetarPainel");
     const imagemInput = document.getElementById("imagem");
 
+    // estado (será carregado do localStorage)
+    let entradas = [];
     let meta = 0, ganhoTotal = 0, banca = 0, inicializado = false;
-    let entradas = JSON.parse(localStorage.getItem("entradas")) || [];
 
-    function salvarEntradas() {
-      localStorage.setItem("entradas", JSON.stringify(entradas));
+    const STORAGE_KEY = "entradasEsportivas";
+
+    // salva tudo: entradas + meta + banca + ganhoTotal + inicializado
+    function salvarTudo() {
+      const payload = { entradas, meta, ganhoTotal, banca, inicializado };
+      localStorage.setItem(STORAGE_KEY, JSON.stringify(payload));
+    }
+
+    // carrega do storage (se houver) e define variáveis
+    function carregarTudo() {
+      const raw = localStorage.getItem(STORAGE_KEY);
+      if (!raw) return;
+      try {
+        const obj = JSON.parse(raw);
+        entradas = Array.isArray(obj.entradas) ? obj.entradas : [];
+        meta = typeof obj.meta === "number" ? obj.meta : 0;
+        banca = typeof obj.banca === "number" ? obj.banca : 0;
+        ganhoTotal = typeof obj.ganhoTotal === "number" ? obj.ganhoTotal : 0;
+        inicializado = !!obj.inicializado;
+      } catch (err) {
+        console.error("Erro ao carregar storage:", err);
+      }
     }
 
     function atualizarPainel() {
@@ -210,129 +290,166 @@
       const progresso = meta > 0 ? (ganhoTotal / meta) * 100 : 0;
       metaRestanteEl.textContent = `Faltam R$ ${restante.toFixed(2)}`;
       barra.style.width = `${Math.min(progresso, 100)}%`;
+      metaEl.textContent = `R$ ${meta.toFixed(2)}`;
       bancaEl.textContent = `R$ ${banca.toFixed(2)}`;
     }
 
-    function renderEntradas() {
+    function renderizar() {
       tabela.innerHTML = "";
       entradas.forEach((e, i) => {
         const linha = document.createElement("tr");
         linha.innerHTML = `
-          <td>${e.jogo}</td>
-          <td>${e.data}</td>
-          <td>${e.hora}</td>
-          <td>${e.odd.toFixed(2)}</td>
-          <td>${e.tipo}</td>
-          <td>R$ ${e.entrada.toFixed(2)}</td>
-          <td><strong style="color:green">R$ ${(e.entrada * e.odd).toFixed(2)}</strong></td>
+          <td>${e.jogo}</td><td>${e.data}</td><td>${e.hora}</td>
+          <td>${parseFloat(e.odd).toFixed(2)}</td><td>${e.tipo}</td>
+          <td>R$ ${parseFloat(e.entrada).toFixed(2)}</td>
+          <td><strong style="color:green">R$ ${(parseFloat(e.entrada) * parseFloat(e.odd)).toFixed(2)}</strong></td>
+          <td>${e.imagem ? `<button class='btn btn-imagem'>🖼️ Ver</button>` : "—"}</td>
           <td>
             <button class="btn btn-ganhou">✅</button>
             <button class="btn btn-perdeu">❌</button>
-            <button class="btn btn-imagem">📷</button>
             <button class="btn btn-remove">🗑️</button>
           </td>
         `;
 
+        // botão Ver imagem (se existir)
+        if (e.imagem) {
+          const btnVer = linha.querySelector(".btn-imagem");
+          btnVer.onclick = () => {
+            const w = window.open();
+            if (!w || w.closed || typeof w.closed == 'undefined') {
+              // fallback simples: abrir usando link
+              const link = document.createElement('a');
+              link.href = e.imagem;
+              link.target = '_blank';
+              link.click();
+            } else {
+              w.document.write(`<title>Imagem</title>
+                <style>body{margin:0;display:flex;align-items:center;justify-content:center;background:#111}img{max-width:100%;max-height:100vh;border-radius:8px;}</style>
+                <img src="${e.imagem}" alt="imagem">`);
+            }
+          };
+        }
+
+        // marcar ganhou — desativa somente os botões de resultado/remover (imagem permanece funcional)
         linha.querySelector(".btn-ganhou").onclick = () => {
-          ganhoTotal += (e.entrada * e.odd) - e.entrada;
-          banca += (e.entrada * e.odd) - e.entrada;
+          if (e.status) return; // já marcado
+          const ganho = (parseFloat(e.entrada) * parseFloat(e.odd)) - parseFloat(e.entrada);
+          ganhoTotal += ganho;
+          banca += ganho;
+          e.status = "ganhou";
           atualizarPainel();
-          linha.style.background = "#dcfce7";
-          linha.querySelectorAll("button").forEach(b => b.disabled = true);
+          // desativa apenas os botões de resultado e remover
+          const btns = linha.querySelectorAll(".btn-ganhou, .btn-perdeu, .btn-remove");
+          btns.forEach(b => b.disabled = true);
+          salvarTudo();
         };
 
         linha.querySelector(".btn-perdeu").onclick = () => {
-          banca -= e.entrada;
+          if (e.status) return; // já marcado
+          banca -= parseFloat(e.entrada);
+          e.status = "perdeu";
           atualizarPainel();
-          linha.style.background = "#fee2e2";
-          linha.querySelectorAll("button").forEach(b => b.disabled = true);
-        };
-
-        linha.querySelector(".btn-imagem").onclick = () => {
-          if (e.imagem) {
-            const imgWin = window.open();
-            imgWin.document.write(`<img src="${e.imagem}" style="max-width:100%;border-radius:10px;">`);
-          } else {
-            alert("Nenhuma imagem adicionada para este jogo.");
-          }
+          const btns = linha.querySelectorAll(".btn-ganhou, .btn-perdeu, .btn-remove");
+          btns.forEach(b => b.disabled = true);
+          salvarTudo();
         };
 
         linha.querySelector(".btn-remove").onclick = () => {
+          // se a entrada já tinha sido marcada, ajustar ganhoTotal/banca ao remover
+          if (e.status === "ganhou") {
+            const ganho = (parseFloat(e.entrada) * parseFloat(e.odd)) - parseFloat(e.entrada);
+            ganhoTotal -= ganho;
+            banca -= ganho;
+          } else if (e.status === "perdeu") {
+            banca += parseFloat(e.entrada);
+          }
           entradas.splice(i, 1);
-          salvarEntradas();
-          renderEntradas();
+          salvarTudo();
+          renderizar();
         };
+
+        // estilizar linha se já tiver status
+        if (e.status === "ganhou") {
+          linha.style.background = "#dcfce7";
+        } else if (e.status === "perdeu") {
+          linha.style.background = "#fee2e2";
+        }
 
         tabela.appendChild(linha);
       });
+
+      atualizarPainel();
     }
 
+    // --- formulário ---
     form.addEventListener("submit", e => {
       e.preventDefault();
-      const jogo = jogoEl.value;
-      const data = dataEl.value;
-      const hora = horaEl.value;
-      const odd = parseFloat(oddEl.value);
-      const tipo = tipoEl.value;
-      const entrada = parseFloat(entradaEl.value);
-      const metaInput = metaElForm.valueAsNumber;
-      const bancaInput = bancaElForm.valueAsNumber;
+      const jogo = document.getElementById("jogo").value;
+      const data = document.getElementById("data").value;
+      const hora = document.getElementById("hora").value;
+      const odd = parseFloat(document.getElementById("odd").value);
+      const tipo = document.getElementById("tipo").value;
+      const entradaValor = parseFloat(document.getElementById("entrada").value);
+      const metaInput = document.getElementById("meta").valueAsNumber;
+      const bancaInput = document.getElementById("banca").valueAsNumber;
 
+      // se ainda não inicializou, seta meta e banca e marca inicializado
       if (!inicializado) {
-        meta = metaInput;
-        banca = bancaInput;
-        metaEl.textContent = `R$ ${meta.toFixed(2)}`;
-        document.getElementById("meta").disabled = true;
-        document.getElementById("banca").disabled = true;
+        meta = isFinite(metaInput) ? metaInput : 0;
+        banca = isFinite(bancaInput) ? bancaInput : 0;
         inicializado = true;
       }
 
-      const reader = new FileReader();
-      const novoItem = { jogo, data, hora, odd, tipo, entrada, imagem: null };
-      if (imagemInput.files[0]) {
+      const novo = {
+        jogo,
+        data,
+        hora,
+        odd,
+        tipo,
+        entrada: entradaValor,
+        imagem: null,
+        status: null
+      };
+
+      // ler imagem (se houver) como base64
+      const file = imagemInput.files[0];
+      if (file) {
+        const reader = new FileReader();
         reader.onload = () => {
-          novoItem.imagem = reader.result;
-          entradas.push(novoItem);
-          salvarEntradas();
-          renderEntradas();
+          novo.imagem = reader.result;
+          entradas.push(novo);
+          salvarTudo();
+          renderizar();
+          form.reset();
         };
-        reader.readAsDataURL(imagemInput.files[0]);
+        reader.readAsDataURL(file);
       } else {
-        entradas.push(novoItem);
-        salvarEntradas();
-        renderEntradas();
+        entradas.push(novo);
+        salvarTudo();
+        renderizar();
+        form.reset();
       }
 
       atualizarPainel();
-      form.reset();
     });
 
+    // reset geral
     resetBtn.onclick = () => {
-      if (confirm("Deseja realmente resetar tudo?")) {
-        entradas = [];
-        localStorage.clear();
-        meta = ganhoTotal = banca = 0;
-        inicializado = false;
-        metaEl.textContent = "R$ 0,00";
-        bancaEl.textContent = "R$ 0,00";
-        metaRestanteEl.textContent = "Faltam R$ 0,00";
-        barra.style.width = "0%";
-        document.getElementById("meta").disabled = false;
-        document.getElementById("banca").disabled = false;
-        renderEntradas();
-      }
+      if (!confirm("Tem certeza que deseja resetar tudo?")) return;
+      entradas = [];
+      meta = 0;
+      ganhoTotal = 0;
+      banca = 0;
+      inicializado = false;
+      localStorage.removeItem(STORAGE_KEY);
+      document.getElementById("meta").disabled = false;
+      document.getElementById("banca").disabled = false;
+      renderizar();
     };
 
-    const jogoEl = document.getElementById("jogo");
-    const dataEl = document.getElementById("data");
-    const horaEl = document.getElementById("hora");
-    const oddEl = document.getElementById("odd");
-    const tipoEl = document.getElementById("tipo");
-    const entradaEl = document.getElementById("entrada");
-    const metaElForm = document.getElementById("meta");
-    const bancaElForm = document.getElementById("banca");
-
-    renderEntradas();
+    // carregar e iniciar
+    carregarTudo();
+    renderizar();
   </script>
 </body>
 </html>
